docs : main 영역 가운데 정렬 CSS 수정
아래의 css 파일 수정
main.css, mainleft.css, mainright.css

--- a/public/www/css/main.css
+++ b/public/www/css/main.css
@@ -1,2 +1,13 @@
 .main {
 }
+
+.main-inner {
+  display: flex;
+  margin: 20px auto 0;
+
+  max-width: 1120px;
+  margin-top: 30px;
+  padding-bottom: 46px;
+
+  justify-content: space-between;
+}
