--- a/public/www/css/common.css
+++ b/public/www/css/common.css
@@ -1,6 +1,7 @@
 @charset "utf-8";
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Inter&display=swap");
+@import url("./kakao.css");
 * {
   margin: 0px;
   padding: 0px;
@@ -11,7 +12,7 @@ a {
   color: #000000;
 }
 body {
-  font-family: "Inter", "Noto Sans KR", sans-serif;
+  font-family: "Kakao", "Inter", "Noto Sans KR", sans-serif;
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
