--- a/public/www/css/mainleft.css
+++ b/public/www/css/mainleft.css
@@ -1,6 +1,113 @@
 .main-left {
   width: 700px;
+  height: 100%;
+}
 
-  height: 100px;
-  background-color: black;
+.main-left-div {
+}
+
+.last-donation {
+  margin-bottom: 30px;
+  padding: 24px 30px 32px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 2px 10px 0px;
+  background-color: rgb(255, 255, 255);
+}
+
+.cnt-money {
+}
+
+/* 추후 수정 예정 */
+/* .last-donation > h4 */
+.last-donation-comment {
+  font-size: 20px;
+  font-weight: 600;
+  line-height: 1.4;
+  letter-spacing: -0.3px;
+}
+
+/* 추후 수정 예정 */
+/* .last-donation > h4 */
+.last-donation-text {
+  padding-top: 4px;
+  font-size: 15px;
+  line-height: 1.6;
+  color: rgb(102, 102, 102);
+  letter-spacing: -0.1px;
+}
+
+.cnt-donation-content {
+  display: flex;
+  padding-top: 20px;
+
+  margin: calc(-12px) 0px;
+}
+
+.cnt-donation-left {
+  /* height: auto;
+  width: auto; */
+}
+
+.cnt-donation-money {
+}
+
+.cnt-donation-img {
+  border: 1px solid rgba(0, 0, 0, 0.03);
+  background-color: aqua;
+  height: 168px;
+  width: 280px;
+  border-radius: inherit;
+
+  background: url("../images/donation_img_01.jpg") no-repeat center;
+  background-size: 100%;
+}
+
+.cnt-donation-img:hover {
+  cursor: pointer;
+}
+
+.cnt-donation-right {
+  width: 100%;
+
+  height: 100%;
+
+  padding: 0 0 0 25px;
+}
+
+.cnt-donation-sub-title {
+}
+
+.cnt-donation-sub-title > strong {
+  font-size: 18px;
+  line-height: 1.33;
+  /* 폰트가 */
+  font-family: "Kakao";
+}
+
+.bar-chart {
+  width: 100%;
+  height: 6px;
+  background-color: red;
+}
+
+.last-donation-goal {
+  height: 64px;
+  margin-top: 0px;
+  padding-top: 12px;
+  /* background-color: #eeeeee; */
+}
+
+.progress-info {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  margin-top: 6px;
+}
+
+.last-donation-btn {
+  display: flex;
+  gap: 9px;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: auto;
+  padding-top: 16px;
 }
