--- a/public/www/css/mainleft.css
+++ b/public/www/css/mainleft.css
@@ -6,7 +6,7 @@
 .main-left-div {
 }
 
-.last-donation {
+.left-div-style {
   margin-bottom: 30px;
   padding: 24px 30px 32px;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 2px 10px 0px;
@@ -18,7 +18,8 @@
 
 /* 추후 수정 예정 */
 /* .last-donation > h4 */
-.last-donation-comment {
+.last-donation-comment,
+.donation-list-comment {
   font-size: 20px;
   font-weight: 600;
   line-height: 1.4;
@@ -27,7 +28,8 @@
 
 /* 추후 수정 예정 */
 /* .last-donation > h4 */
-.last-donation-text {
+.last-donation-text,
+.donation-list-text {
   padding-top: 4px;
   font-size: 15px;
   line-height: 1.6;
@@ -37,9 +39,9 @@
 
 .cnt-donation-content {
   display: flex;
-  padding-top: 20px;
 
   margin: calc(-12px) 0px;
+  padding-top: 20px;
 }
 
 .cnt-donation-left {
@@ -50,19 +52,16 @@
 .cnt-donation-money {
 }
 
-.cnt-donation-img {
-  border: 1px solid rgba(0, 0, 0, 0.03);
-  background-color: aqua;
-  height: 168px;
+.cnt-money-img {
   width: 280px;
-  border-radius: inherit;
+  height: 168px;
+  border: 1px solid rgba(0, 0, 0, 0.03);
 
   background: url("../images/donation_img_01.jpg") no-repeat center;
+  background-color: aqua;
   background-size: 100%;
-}
-
-.cnt-donation-img:hover {
   cursor: pointer;
+  border-radius: inherit;
 }
 
 .cnt-donation-right {
@@ -77,12 +76,14 @@
 }
 
 .cnt-donation-sub-title > strong {
-  font-size: 18px;
-  line-height: 1.33;
   /* 폰트가 */
   font-family: "Kakao";
+  font-size: 18px;
+  line-height: 1.33;
 }
 
+/* 추후 변경 */
+/* .cnt-donation-sub-title .bar-chart { */
 .bar-chart {
   width: 100%;
   height: 6px;
@@ -97,9 +98,9 @@
 }
 
 .progress-info {
+  width: 100%;
   display: flex;
   flex-direction: column;
-  width: 100%;
   margin-top: 6px;
 }
 
@@ -111,3 +112,128 @@
   margin-top: auto;
   padding-top: 16px;
 }
+
+.last-donation-btn > button {
+  position: relative;
+  width: 100%;
+  height: 40px;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0px;
+  padding: 0px 18px;
+  border: 1px solid rgb(201, 201, 201);
+  box-shadow: none;
+  background-color: rgb(255, 255, 255);
+  font-family: "Kakao";
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 1.5;
+  letter-spacing: -0.1px;
+  cursor: pointer;
+  box-sizing: border-box;
+  border-radius: 6px;
+}
+.last-donation-btn > button::after {
+  content: url("footer_facebook_gray80.svg");
+  width: 10px;
+  height: 10px;
+}
+
+.cnt-time-img {
+  width: 280px;
+  height: 168px;
+  border: 1px solid rgba(0, 0, 0, 0.03);
+
+  background: url("../images/donation_img_04.jpg") no-repeat center;
+  background-color: aqua;
+  background-size: 100%;
+  cursor: pointer;
+  border-radius: inherit;
+}
+
+.donation-list-div {
+  /* position: relative; */
+}
+
+.many-donation-list {
+  width: 100%;
+
+  display: flex;
+
+  display: flex;
+  align-items: stretch;
+  justify-content: space-between;
+  flex-wrap: nowrap;
+  padding-top: 16px;
+}
+
+.many-donation {
+  width: 200px;
+  height: auto;
+  /* border: 1px solid rgba(0, 0, 0, 0.3); */
+  border-radius: inherit;
+}
+
+.many-money-img {
+  width: 100%;
+  height: 137px;
+  background: url("../images/donation_img_02.jpg") no-repeat center;
+}
+
+.many-donation .bar-chart {
+  width: 100%;
+  height: 3px;
+  background-color: red;
+}
+
+.many-donation .last-donation-goal {
+}
+
+.donation-list-item {
+}
+/* .donation-list-sub-title {
+} */
+
+.center-name {
+}
+
+.donation-list-tags {
+  display: flex;
+  gap: 6px;
+  margin: 15px -18px 5px;
+  padding: 0px 20px;
+  white-space: nowrap;
+  overflow: hidden;
+}
+
+.donation-list-tags button {
+  font-family: "Kakao";
+
+  height: 37px;
+  padding: 7px 14px;
+  box-shadow: none;
+
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid rgb(238, 238, 238);
+  margin: 0px;
+  line-height: 1.5;
+  letter-spacing: -0.1px;
+  text-decoration: none;
+  cursor: pointer;
+  background-color: rgb(255, 255, 255);
+  color: rgb(32, 32, 32);
+  font-size: 12px;
+  border-radius: 999px;
+}
+
+.donation-list-tags > #basic {
+  border: 1px solid rgb(32, 32, 32);
+  background-color: rgb(32, 32, 32);
+  color: rgb(255, 255, 255);
+}
+/* 
+.left-slide-pagecnt {
+} */
