docs : main-right 구조 작업중

--- a/public/www/css/common.css
+++ b/public/www/css/common.css
@@ -19,6 +19,9 @@ body {
   color: rgb(32, 32, 32);
   overflow-wrap: break-word;
 }
+.wrap {
+  padding-top: 70px;
+}
 
 .br-12 {
   border-radius: 12px;
