--- a/public/www/css/header.css
+++ b/public/www/css/header.css
@@ -1,12 +1,19 @@
 .header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
   height: 70px;
   background-color: bisque;
   border-bottom: 1px solid;
+  z-index: 999999;
 }
 .header-inner {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  /* width: calc(100% - 20px);
+  max-width: 1120px; */
   width: 1120px;
   height: 100%;
   margin: 0px auto;
