--- a/public/www/css/mainright.css
+++ b/public/www/css/mainright.css
@@ -5,17 +5,132 @@
 .main-right-div {
 }
 .main-right-slide {
-  background-color: aquamarine;
 }
-
+/* ------------------------------------------------- */
 .mr-slide-donation {
+  position: relative;
+  background-color: #ffe800;
+  /* 패딩 수정필요 */
+  padding: 34px 26px 29px 26px;
+
+  border-radius: 12px 12px 0px 0px;
 }
-.mr-slide-review {
+.mr-slide-donation-link {
+  display: inline-block;
+}
+.mr-slide-donation-description {
+  font-size: 20px;
+  line-height: 1.5;
+}
+.mr-slide-donation-date {
+  display: block;
+  padding-top: 12px;
+  font-size: 13px;
+  color: rgba(0, 0, 0, 0.5);
+}
+.mr-slide-donation-img {
+  position: absolute;
+  right: 20px;
+  top: 19px;
+  width: 105px;
+  height: 133px;
+  background: url("../images/heart_choonsik_img.png") no-repeat center;
+  background-size: 100%;
+}
+.mr-slide-donation-all {
 }
 
-.main-right-banner {
+.mr-slide-donation-all a {
+  display: block;
+  width: 100%;
+  height: 100%;
 }
+.mr-slide-donation-money {
+  display: flex;
+  align-items: center;
+  background-color: #fff;
+  height: 60px;
+  margin-top: 41px;
+  padding: 0px 20px;
+}
+.mr-slide-donation-icon {
+  display: block;
+  width: 18px;
+  height: 18px;
+  background: #fff url("../images/ico_won.png") no-repeat center;
+  background-size: 100%;
+  margin-right: 8px;
+}
+
+.mr-slide-money-total {
+  font-size: 18px;
+  margin-left: 28px;
+}
+
+.mr-slide-review {
+  /* 패딩 수정필요 */
+  padding: 30px 26px 45px;
+
+  border-radius: 0px 0px 12px 12px;
+  background-color: wheat;
+}
+.mr-slide-review a {
+  display: inline-block;
+}
+.mr-slide-review h4 {
+  font-size: 13px;
+  color: #888;
+}
+.mr-slide-review strong {
+  display: block;
+  padding-top: 16px;
+  font-size: 18px;
+  line-height: 1.5;
+}
+.mr-slide-review p {
+  padding-top: 11px;
+  font-size: 14px;
+  line-height: 2;
+}
+/* ------------------------------------------------- */
+.main-right-banner {
+  margin-top: 30px;
+  background: #1e2166;
+}
+.main-right-banner a {
+  display: block;
+  padding: 30px 20px;
+  padding-bottom: 110px;
+}
+.mr-banner-frame {
+}
+.mr-banner-txt {
+  color: #fff;
+  font-size: 20px;
+  display: block;
+  width: 150px;
+  word-break: keep-all;
+
+  /* display: -webkit-box;
+  overflow: hidden;
+  width: 200px;
+  text-overflow: ellipsis;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  letter-spacing: -0.18px;
+  white-space: pre-line;
+  word-break: keep-all; */
+}
+.mr-banner-link {
+  color: #fff;
+  font-size: 14px;
+  width: 180px;
+  padding-top: 10px;
+}
+/* ------------------------------------------------- */
 .main-right-score {
 }
+/* ------------------------------------------------- */
 .main-right-news {
 }
+/* ------------------------------------------------- */
