docs : Swiper 작성 완료, 메인 div 리스트 기초 작성, footer 작성중

--- a/public/www/css/common.css
+++ b/public/www/css/common.css
@@ -18,9 +18,11 @@ body {
   font-style: normal;
   color: rgb(32, 32, 32);
   overflow-wrap: break-word;
+  background-color: rgb(247, 247, 247);
 }
 .wrap {
   padding-top: 70px;
+  margin: 0 10px;
 }
 
 .br-12 {
