--- a/public/www/css/footer.css
+++ b/public/www/css/footer.css
@@ -1,2 +1,112 @@
 .footer {
+  position: relative;
+  height: 180px;
+  padding: 40px 0px 45px;
+  border-top: 1px solid rgb(238, 238, 238);
+}
+
+.footer-inner {
+  width: 1120px;
+  /* max-width: 1120px; */
+  /* height: 100%; */
+  margin: 0px auto;
+  display: flex;
+  align-items: flex-start;
+  flex-direction: column;
+}
+
+.footer-inner li {
+  display: list-item;
+  position: relative;
+  font-size: 13px;
+  line-height: 1.54;
+  letter-spacing: -0.1px;
+}
+
+.footer-inner li > a {
+  display: inline-block;
+  vertical-align: top;
+  font: inherit;
+  text-decoration: none;
+  color: inherit;
+}
+
+.footer-logo {
+  display: block;
+  width: 115px;
+  height: 18px;
+
+  background: url("../images/footer_logo_black.svg") no-repeat center;
+  background-size: cover;
+}
+
+.item-display-n {
+  display: none;
+}
+
+.footer-inner > p {
+  padding: 16px 0px 18px;
+  color: rgb(102, 102, 102);
+  font-size: 14px;
+  font-style: normal;
+  overflow-wrap: break-word;
+  line-height: 1.57;
+  letter-spacing: -0.1px;
+}
+
+.footer-info {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  padding-top: 0px;
+  top: 0px;
+  gap: 16px;
+}
+
+.footer-li-style {
+  display: inline-block;
+  vertical-align: top;
+  text-decoration: none;
+  cursor: pointer;
+  padding: 6px 0px;
+
+  color: rgb(68, 68, 68);
+  font-size: 14px;
+  font-style: normal;
+  /* font-family: "KakaoBig Regular", "Apple SD Gothic Neo", "Malgun Gothic",
+    "맑은 고딕", dotum, 돋움, sans-serif; */
+  overflow-wrap: break-word;
+  line-height: 1.57;
+  letter-spacing: -0.1px;
+}
+
+.footer-menu-list {
+  display: flex;
+  align-items: center;
+}
+
+.footer-sns-list {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+}
+
+.footer-sns-list li {
+  display: inline-block;
+  vertical-align: top;
+}
+
+.footer-sns-link > span {
+  width: 30px;
+  text-align: center;
+}
+
+.footer-sns-list i {
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  vertical-align: top;
 }
