--- a/public/www/css/header.css
+++ b/public/www/css/header.css
@@ -4,8 +4,18 @@
   left: 0;
   width: 100%;
   height: 70px;
-  background-color: bisque;
+  background-color: #fff;
   z-index: 999999;
+}
+.header::before {
+  content: "";
+  display: block;
+  position: absolute;
+  right: 0px;
+  bottom: 0px;
+  width: 100%;
+  height: 1px;
+  background-color: rgb(238, 238, 238);
 }
 .header-inner {
   display: flex;
@@ -24,19 +34,83 @@
 .header-logo-img {
   display: block;
   width: 115px;
-  height: 70px;
+  height: 100%;
 }
 
 .header-menu {
+  display: flex;
+  align-items: center;
+  height: 100%;
+  /* 반응형때 다시 확인 */
+  /* flex: 1 0 auto;
+  justify-content: center; */
 }
 .header-menu-list {
   display: flex;
+  height: 100%;
+  align-items: center;
+}
+.header-menu-list li {
+  position: relative;
+  margin: 0px 11px;
+  height: 100%;
 }
 .header-menu-list a {
+  display: flex;
+  align-items: center;
+  height: 100%;
   padding: 0 14px;
+}
+.list-line:focus {
+  border-bottom: 2px solid rgb(57, 57, 57);
+}
+.header-menu-list i {
+  position: absolute;
+  top: 24px;
+  right: 6px;
+  width: 4px;
+  height: 4px;
+  border-radius: 50%;
+  background-color: rgb(255, 90, 114);
 }
 .header-icon {
 }
 .header-icon-list {
   display: flex;
+  align-items: center;
+}
+
+.header-icon-list-profile {
+  display: flex;
+  align-items: center;
+}
+.header-icon-list-profile img {
+  display: block;
+  width: 24px;
+  height: 24px;
+  /* object-fit: cover; */
+  mask-image: url(../images/squircle.svg);
+  mask-size: 100% 100%;
+}
+
+.header-icon-list-search a {
+  display: block;
+  margin: 0px 11px 0px 19px;
+  padding: 8px;
+}
+
+.header-icon-list-search svg {
+  display: block;
+  width: 22px;
+  height: 22px;
+}
+.header-icon-list-menu {
+  height: 100%;
+  width: 100%;
+}
+.header-icon-list-menu a {
+  display: block;
+  padding: 8px;
+}
+.header-icon-list-menu svg {
 }
