--- a/public/www/css/mainright.css
+++ b/public/www/css/mainright.css
@@ -6,6 +6,7 @@
 }
 .main-right-slide {
   box-shadow: rgba(0, 0, 0, 0.1) 0px 2px 10px 0px;
+  margin-bottom: 30px;
 }
 /* ------------------------------------------------- */
 .mr-slide-donation {
@@ -28,7 +29,7 @@
   font-size: 13px;
   color: rgba(0, 0, 0, 0.5);
 }
-.mr-slide-donation-img {
+.mr-slide-donation-choonsik {
   position: absolute;
   right: 20px;
   top: 19px;
@@ -72,7 +73,7 @@
   padding: 30px 26px 45px;
 
   border-radius: 0px 0px 12px 12px;
-  background-color: wheat;
+  background-color: #fff;
 }
 .mr-slide-review a {
   display: inline-block;
@@ -94,13 +95,13 @@
 }
 /* ------------------------------------------------- */
 .main-right-banner {
-  margin-top: 30px;
+  position: relative;
+  margin-bottom: 30px;
   background: #1e2166;
 }
 .main-right-banner a {
   display: block;
-  padding: 30px 20px;
-  padding-bottom: 110px;
+  padding: 35px 26px 85px 26px;
 }
 .mr-banner-frame {
 }
@@ -110,16 +111,8 @@
   display: block;
   width: 150px;
   word-break: keep-all;
-
-  /* display: -webkit-box;
-  overflow: hidden;
-  width: 200px;
-  text-overflow: ellipsis;
-  -webkit-line-clamp: 2;
-  -webkit-box-orient: vertical;
-  letter-spacing: -0.18px;
-  white-space: pre-line;
-  word-break: keep-all; */
+  font-weight: 600;
+  line-height: 1.5;
 }
 .mr-banner-link {
   color: #fff;
@@ -127,18 +120,31 @@
   width: 180px;
   padding-top: 10px;
 }
+.mr-banner-choonsik {
+  position: absolute;
+  bottom: 20px;
+  right: 20px;
+  width: 110px;
+  height: 110px;
+  background: url(../images/hi_choonsik_img.png) no-repeat center;
+  background-size: 100%;
+}
 /* ------------------------------------------------- */
 .main-right-score {
-  margin-top: 30px;
   padding: 30px 26px;
-  background-color: aquamarine;
+  margin-bottom: 30px;
+  background-color: #fff;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 2px 10px 0px;
 }
-.mr-score-title {
+.mr-score-title-link {
+  display: inline-block;
 }
 .mr-score-title-txt {
   display: block;
   color: rgb(32, 32, 32);
   font-size: 20px;
+  line-height: 1.5;
+  margin-bottom: 20px;
 }
 .main-right-score ul {
   display: flex;
@@ -151,10 +157,19 @@
 .mr-score-list a {
   display: flex;
   height: 100%;
+  background-color: rgb(245, 245, 244);
+  border-radius: 6px;
 }
 .mr-score-list-img {
   width: 60px;
-  background-color: #fff;
+  height: 100%;
+}
+.mr-score-list-img img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 6px;
 }
 .mr-score-list-q {
   display: flex;
@@ -172,5 +187,51 @@
 }
 /* ------------------------------------------------- */
 .main-right-news {
+  background-color: #fff;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 2px 10px 0px;
+  padding: 30px 26px;
 }
+.main-right-news h4 {
+  margin-bottom: 19px;
+  font-size: 20px;
+}
+.main-right-news ul {
+  display: flex;
+  flex-wrap: wrap;
+}
+.main-right-news li {
+  position: relative;
+  width: 50%;
+  padding-top: 50%;
+  border-radius: 4px;
+}
+.mr-news-list-gray {
+  background-color: rgb(170, 166, 162);
+}
+.mr-news-list-yellow {
+  background-color: rgb(255, 201, 0);
+}
+
+.mr-news-div {
+  position: absolute;
+  inset: 0px;
+  padding: 15px 12px 12px;
+}
+.main-right-news a {
+}
+.mr-news-div strong {
+  font-size: 15px;
+  color: #fff;
+}
+.mr-news-icon {
+  position: absolute;
+  bottom: 12px;
+  right: 12px;
+  display: block;
+  width: 24px;
+  height: 24px;
+  background: url(../images/ico_arrow_inverted.png) no-repeat cover;
+  background-size: 100%;
+}
+
 /* ------------------------------------------------- */
