--- a/public/www/css/common.css
+++ b/public/www/css/common.css
@@ -1,7 +1,27 @@
 @charset "utf-8";
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Inter&display=swap");
-@import url("./kakao.css");
+@font-face {
+  font-family: "KakaoBig regular";
+  font-style: normal;
+  font-weight: normal;
+  font-display: swap;
+  src: url(https://t1.kakaocdn.net/together_image/fonts/kakao-big-regular.woff2)
+      format("woff2"),
+    url(https://t1.kakaocdn.net/together_image/fonts/kakao-big-regular.woff)
+      format("woff");
+}
+@font-face {
+  font-family: "KakaoBig Bold";
+  font-style: normal;
+  font-weight: bold;
+  font-display: swap;
+  src: url(https://t1.kakaocdn.net/together_image/fonts/kakao-big-bold.woff2)
+      format("woff2"),
+    url(https://t1.kakaocdn.net/together_image/fonts/kakao-big-bold.woff)
+      format("woff");
+}
+
 * {
   margin: 0px;
   padding: 0px;
@@ -12,7 +32,8 @@ a {
   color: #000000;
 }
 body {
-  font-family: "Kakao", "Inter", "Noto Sans KR", sans-serif;
+  font-family: "KakaoBig regular", "KakaoBig Bold", "Inter", "Noto Sans KR",
+    sans-serif;
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
