--- a/public/www/css/footer.css
+++ b/public/www/css/footer.css
@@ -65,7 +65,7 @@
   gap: 16px;
 }
 
-.footer-li-style {
+.footer-info-style {
   display: inline-block;
   vertical-align: top;
   text-decoration: none;
@@ -87,6 +87,32 @@
   align-items: center;
 }
 
+.footer-menu-list li {
+  display: flex;
+  align-items: center;
+}
+
+.division-point::after {
+  margin-left: 10px;
+  margin-right: 10px;
+  width: 2px;
+  height: 2px;
+  border-radius: 100%;
+  background-color: rgb(68, 68, 68);
+  display: block;
+  content: "";
+}
+
+.privacy-policy {
+  color: rgb(68, 68, 68);
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 600;
+  overflow-wrap: break-word;
+  line-height: 1.57;
+  letter-spacing: -0.1px;
+}
+
 .footer-sns-list {
   display: flex;
   align-items: center;
@@ -95,8 +121,13 @@
 }
 
 .footer-sns-list li {
-  display: inline-block;
+  width: 30px;
   vertical-align: top;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
 }
 
 .footer-sns-link > span {
