--- a/public/www/css/mainleft.css
+++ b/public/www/css/mainleft.css
@@ -32,34 +32,308 @@ progress::-webkit-progress-value {
 }
 
 .cnt-money {
+  position: relative;
+  cursor: pointer;
 }
 
-/* 추후 수정 예정 */
-/* .last-donation > h4 */
-.last-donation-comment,
-.donation-list-comment {
+.left-title-font-lh14 {
+  font-family: "KakaoBig Bold", "Inter", "Noto Sans KR", sans-serif;
   font-size: 20px;
+  font-style: normal;
   font-weight: 600;
   line-height: 1.4;
+  color: rgb(32, 32, 32);
   letter-spacing: -0.3px;
+  overflow-wrap: break-word;
+  -webkit-font-smoothing: antialiased;
 }
 
-/* 추후 수정 예정 */
-/* .last-donation > h4 */
-.last-donation-text,
-.donation-list-text {
+.left-subtext-font-lh16 {
   padding-top: 4px;
+  font-family: "KakaoBig Regular", "Inter", "Noto Sans KR", sans-serif;
   font-size: 15px;
+  font-style: normal;
   line-height: 1.6;
   color: rgb(102, 102, 102);
   letter-spacing: -0.1px;
+  overflow-wrap: break-word;
+  -webkit-font-smoothing: antialiased;
+}
+
+.money_cnt {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 40px;
+  padding: 0px 10px;
+  border-radius: 6px;
+  background-color: rgb(32, 32, 32);
+  box-sizing: border-box;
+  position: absolute;
+  top: 100px;
+  left: 30px;
+  z-index: 10;
+  width: 280px;
+  border-radius: 6px 6px 0px 0px;
+}
+
+.money_cnt_text {
+  color: rgb(201, 201, 201);
+  font-size: 14px;
+  font-style: normal;
+  font-family: "KakaoBig Bold", "Inter", "Noto Sans KR", sans-serif;
+  overflow-wrap: break-word;
+  line-height: 1.57;
+  letter-spacing: -0.1px;
+}
+
+.money_cnt_text:last-child {
+  padding-left: 3px;
+}
+
+.money_cnt_all_div {
+  display: flex;
+  align-items: center;
+}
+
+.left-df-title-font {
+  display: -webkit-box;
+  overflow: hidden;
+  font-family: "KakaoBig Regular", "Inter", "Noto Sans KR", sans-serif;
+  font-style: normal;
+  color: rgb(32, 32, 32);
+  letter-spacing: -0.1px;
+  overflow-wrap: break-word;
+  text-overflow: ellipsis;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  line-height: 1.56;
+}
+
+.money_cnt_cards_div {
+  /* display: flex;
+  align-items: center; */
+}
+
+.money_cnt_cards {
+  display: flex;
+}
+
+.money_cnt_card {
+  display: block;
+  position: relative;
+  padding-bottom: 16px;
+  margin: 0px 1px;
+  font-size: 18px;
+  line-height: 0.95;
+  border-radius: 2px;
+}
+
+.money_cnt_card:nth-last-child(3)::before {
+  display: block;
+  position: absolute;
+  left: -4px;
+  bottom: 0px;
+  color: rgb(255, 255, 255);
+  font-family: "KakaoBig Bold";
+  font-size: 14px;
+  line-height: 33px;
+  content: ",";
+}
+
+.money_cnt_card:nth-last-child(3n) {
+  margin-left: 3px;
+}
+
+.card_top,
+.card_bottom,
+.card_back::before,
+.card_back::after {
+  display: block;
+  width: 16px;
+  height: 16px;
+  padding-top: 7px;
+  color: rgb(255, 255, 255);
+  background: rgb(68, 68, 68);
+  border-radius: 2px 2px 0px 0px;
+  text-align: center;
+  transform-style: preserve-3d;
+  transform: translateZ(0px);
+  box-sizing: border-box;
+}
+
+.card_bottom {
+  color: rgb(255, 255, 255);
+  position: absolute;
+  top: 50%;
+  left: 0px;
+  background: rgb(68, 68, 68);
+  border-radius: 0px 0px 2px 2px;
+  pointer-events: none;
+  overflow: hidden;
+}
+
+.card_bottom::before {
+  display: block;
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  width: 100%;
+  height: 1px;
+  background-color: rgb(32, 32, 32);
+  content: "";
+}
+
+.card_bottom::after {
+  display: block;
+  margin-top: -16px;
+  content: attr(data-value);
+}
+
+.card_back {
+  position: absolute;
+  top: 0px;
+  height: 100%;
+  left: 0%;
+  pointer-events: none;
+}
+
+.card_back::before {
+  position: relative;
+  content: attr(data-value);
+  z-index: -1;
+  overflow: hidden;
+
+  animation-name: cardbank;
+  animation-duration: 0.5s;
+  animation-timing-function: cubic-bezier(0.37, 0.01, 0.94, 0.35);
+  animation-delay: 0s;
+  animation-iteration-count: 1;
+  animation-direction: normal;
+  animation-fill-mode: both;
+  animation-play-state: running;
+  transform-origin: center bottom;
+}
+
+/* .money_cnt_card:nth-of-type(1) .card_back::before {
+  animation-delay: 0ms;
+} */
+
+.money_cnt_card:nth-of-type(2) .card_back::before {
+  animation-delay: 100ms;
+}
+.money_cnt_card:nth-of-type(3) .card_back::before {
+  animation-delay: 200ms;
+}
+.money_cnt_card:nth-of-type(4) .card_back::before {
+  animation-delay: 300ms;
+}
+.money_cnt_card:nth-of-type(5) .card_back::before {
+  animation-delay: 400ms;
+}
+.money_cnt_card:nth-of-type(6) .card_back::before {
+  animation-delay: 500ms;
+}
+
+@keyframes cardbank {
+  0% {
+    transform: rotateX(0deg);
+    z-index: 2;
+  }
+
+  100% {
+    transform: rotateX(-90deg);
+    opacity: 0;
+  }
+
+  0%,
+  99% {
+    opacity: 0.99;
+  }
+}
+
+.card_back .card_bottom {
+  animation-name: cardbottm;
+  animation-duration: 1s;
+  animation-timing-function: cubic-bezier(0.15, 0.45, 0.28, 1);
+  /* animation-delay: 0.5s; */
+  animation-delay: 0s;
+  animation-iteration-count: 1;
+  animation-direction: normal;
+  animation-fill-mode: none;
+  animation-play-state: running;
+  transform-origin: center top;
+}
+
+/* .money_cnt_card:nth-of-type(1) .card_back .card_bottom {
+  animation-delay: 0ms;
+} */
+.money_cnt_card:nth-of-type(2) .card_back .card_bottom {
+  animation-delay: 100ms;
+}
+.money_cnt_card:nth-of-type(3) .card_back .card_bottom {
+  animation-delay: 200ms;
+}
+.money_cnt_card:nth-of-type(4) .card_back .card_bottom {
+  animation-delay: 300ms;
+}
+.money_cnt_card:nth-of-type(5) .card_back .card_bottom {
+  animation-delay: 400ms;
+}
+.money_cnt_card:nth-of-type(6) .card_back .card_bottom {
+  animation-delay: 500ms;
+}
+
+@keyframes cardbottm {
+  0%,
+  50% {
+    z-index: -1;
+    transform: rotateX(90deg);
+    opacity: 0;
+  }
+
+  51% {
+    opacity: 0.99;
+  }
+
+  100% {
+    opacity: 0.99;
+    transform: rotateX(0deg);
+    z-index: 5;
+  }
+}
+
+.left-title-font-lh167 {
+  font-family: "KakaoBig Bold", "Inter", "Noto Sans KR", sans-serif;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 1.67;
+  color: rgb(32, 32, 32);
+  letter-spacing: -0.1px;
+  overflow-wrap: break-word;
+}
+
+.cnt-donation-sub-title > .left-df-title-font {
+  font-family: "KakaoBig Bold";
+  font-size: 18px;
+  line-height: 1.33;
+}
+
+.cnt-donation-content-out {
+  padding-top: 20px;
+  width: 100%;
+  margin: calc(-12px) 0px;
 }
 
 .cnt-donation-content {
+  position: relative;
   display: flex;
+  margin: calc(12px) 0px;
+  /* height: 168px; */
 
-  margin: calc(-12px) 0px;
-  padding-top: 20px;
+  /* margin: calc(-12px) 0px; */
+  /* padding-top: 20px; */
 }
 
 .cnt-donation-left {
@@ -71,7 +345,7 @@ progress::-webkit-progress-value {
 .cnt-money-img {
   width: 280px;
   height: 168px;
-  border: 1px solid rgba(0, 0, 0, 0.03);
+  /* border: 1px solid rgba(0, 0, 0, 0.03); */
 
   background: url("../images/donation_img_01.jpg") no-repeat center;
   background-color: aqua;
@@ -104,18 +378,18 @@ progress::-webkit-progress-value {
   background-color: red;
 }
 
-.last-donation-goal {
+/* .last-donation-goal {
   height: 64px;
   margin-top: 0px;
   padding-top: 12px;
-}
+} */
 
-.progress-info {
+/* .progress-info {
   width: 100%;
   display: flex;
   flex-direction: column;
   margin-top: 6px;
-}
+} */
 
 .last-donation-btn {
   display: flex;
@@ -124,6 +398,11 @@ progress::-webkit-progress-value {
   justify-content: space-between;
   margin-top: auto;
   padding-top: 16px;
+
+  position: absolute;
+  right: 30px;
+  bottom: 32px;
+  width: 335px;
 }
 
 .last-donation-btn > button {
@@ -138,46 +417,55 @@ progress::-webkit-progress-value {
   border: 1px solid rgb(201, 201, 201);
   box-shadow: none;
   background-color: rgb(255, 255, 255);
-  font-family: "Kakao";
+  /* font-family: "KakaoBig Regular"; */
   font-size: 14px;
-  font-weight: 700;
   line-height: 1.5;
   letter-spacing: -0.1px;
   cursor: pointer;
+  color: rgb(68, 68, 68);
   box-sizing: border-box;
   border-radius: 6px;
 }
-.last-donation-btn > button::after {
-  content: url("footer_facebook_gray80.svg");
-  width: 10px;
-  height: 10px;
+
+.last-donation-btn span {
+  font-family: "KakaoBig Regular";
+}
+
+.heart_icon {
+  flex-shrink: 0;
+  width: 50px;
+  height: 50px;
+  transform: scale(0.8);
+  margin: 0px -9px 0px -16px;
+  background: url(https://t1.kakaocdn.net/together_image/common/heart_fundraising.png)
+    0px 0px / auto 100% repeat-x;
 }
 
 /* 말풍선 */
 .cheering-ani {
+  position: absolute;
+  bottom: -27px;
+  left: 50%;
+  height: 28px;
   display: inline-flex;
   align-items: center;
-  position: absolute;
-  left: 50%;
-  bottom: -27px;
-  height: 28px;
   padding: 0px 10px;
-  border-radius: 6px;
   background-color: rgb(32, 32, 32);
-  transform: translateX(-50%);
-  white-space: nowrap;
-  opacity: 0;
-  pointer-events: none;
   font-size: 11px;
+  white-space: nowrap;
 
   animation-name: cheering;
-  animation-delay: 1s;
-  animation-timing-function: linear;
   animation-duration: 5s;
+  animation-timing-function: linear;
+  animation-delay: 1s;
   animation-iteration-count: 1;
   animation-direction: normal;
   animation-fill-mode: none;
   animation-play-state: running;
+  pointer-events: none;
+  border-radius: 6px;
+  transform: translateX(-50%);
+  opacity: 0;
 }
 
 @keyframes cheering {
@@ -196,23 +484,23 @@ progress::-webkit-progress-value {
 
 /* 말풍선 꼬리 */
 .cheering-ani::before {
-  display: block;
+  content: "";
   position: absolute;
-  left: 39px;
   top: -6px;
+  left: 39px;
   width: 9px;
   height: 6px;
+  display: block;
   background: url("../images/arrow_bubble_black.png") 50% 0px;
-  content: "";
 }
 
 .cheering-text-style {
-  color: rgb(255, 255, 255);
   font-style: normal;
+  line-height: 1.1;
+  color: rgb(255, 255, 255);
+  letter-spacing: -0.8px;
   overflow-wrap: break-word;
   -webkit-font-smoothing: antialiased;
-  line-height: 1.1;
-  letter-spacing: -0.8px;
 }
 
 .cheering-text-style > em {
@@ -255,6 +543,17 @@ progress::-webkit-progress-value {
   width: 100%;
   height: 137px;
   background: url("../images/donation_img_02.jpg") no-repeat center;
+  background-size: 100%;
+}
+
+.many-donation:nth-last-child(2) .many-money-img {
+  background: url("../images/donation_img_01.jpg") no-repeat center;
+  background-size: 100%;
+}
+
+.many-donation:nth-last-child(1) .many-money-img {
+  background: url("../images/donation_img_03.jpg") no-repeat center;
+  background-size: 100%;
 }
 
 .many-donation .bar-chart {
@@ -267,12 +566,42 @@ progress::-webkit-progress-value {
 }
 
 .donation-list-item {
+  display: flex;
+  flex-direction: column;
+  flex: 1 0 auto;
+  overflow: visible;
+  position: relative;
+  width: 100%;
+  height: auto;
+  padding: 12px 0px 0px;
+  box-sizing: border-box;
 }
 
-.donation-list-sub-title {
+.donation-list-item > .left-df-title-font {
+  font-size: 14px;
+  line-height: 20px;
+}
+
+.df-subtext-font {
+  width: 100%;
+  margin-top: 4px;
+
+  overflow: hidden;
+  font-family: "KakaoBig Regular", "Inter", "Noto Sans KR", sans-serif;
+  font-size: 13px;
+  font-style: normal;
+  line-height: 1.5;
+  color: rgb(136, 136, 136);
+  letter-spacing: -0.1px;
+  white-space: nowrap;
+  overflow-wrap: break-word;
+  text-overflow: ellipsis;
 }
 
 .center-name {
+  margin-top: 2px;
+  font-size: 12px;
+  line-height: 18px;
 }
 
 .donation-list-tags {
@@ -294,19 +623,23 @@ progress::-webkit-progress-value {
   border: 1px solid rgb(238, 238, 238);
   box-shadow: none;
   background-color: rgb(255, 255, 255);
-  font-family: "Kakao";
-  font-size: 12px;
-  line-height: 1.5;
+  font-family: "KakaoBig Regular", "Inter", "Noto Sans KR", sans-serif;
+  font-size: 14px;
+  font-style: normal;
+  line-height: 1.54;
   color: rgb(32, 32, 32);
   text-decoration: none;
   letter-spacing: -0.1px;
   cursor: pointer;
   border-radius: 999px;
+  overflow-wrap: break-word;
 }
 
 .donation-list-tags > #basic {
   border: 1px solid rgb(32, 32, 32);
   background-color: rgb(32, 32, 32);
+  font-size: 14px;
+  font-family: "KakaoBig Bold", "Inter", "Noto Sans KR", sans-serif;
   color: rgb(255, 255, 255);
 }
 
@@ -366,31 +699,52 @@ progress::-webkit-progress-value {
   padding: 0px;
   border: 0px;
   background-color: transparent;
-  font-size: 13px;
   letter-spacing: -0.15px;
   order: 1;
 }
 
-.swiper-tag > span {
+.tag-df-font {
+  color: rgb(136, 136, 136);
   font-size: 12px;
   font-style: normal;
-  color: rgb(136, 136, 136);
-  letter-spacing: -0.1px;
+  font-family: "KakaoBig Regular", "Inter", "Noto Sans KR", sans-serif;
   overflow-wrap: break-word;
+  line-height: 1.67;
+  letter-spacing: -0.1px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+.swiper-tag > span:first-child {
   opacity: 0.7;
+  padding-right: 2px;
 }
 
-.left-swiper-info > strong,
-.card-contents-info > strong {
-  padding-top: 4px;
-  font-size: 20px;
-  line-height: 1.56;
-  color: rgb(255, 255, 255);
-  white-space: pre-wrap;
+.left-swiper-info > strong {
   order: 2;
+  font-family: "KakaoBig Bold";
+  font-size: 20px;
+  white-space: pre-wrap;
+  word-break: keep-all;
+  color: rgb(255, 255, 255);
 }
 
-.left-swiper-info > span,
+.left-swiper-subtext {
+  display: -webkit-box;
+  overflow: hidden;
+  order: 3;
+  color: rgb(153, 153, 153);
+  font-size: 14px;
+  line-height: 1.43;
+  white-space: normal;
+  -webkit-box-orient: vertical;
+  /* max-height: 46px; */
+  -webkit-line-clamp: 2;
+  padding-top: 11px;
+  line-height: 23px;
+}
+
 .card-contents-info > span {
   margin-top: 4px;
   padding-top: 11px;
@@ -418,6 +772,8 @@ progress::-webkit-progress-value {
   text-align: center;
   letter-spacing: -0.3px;
   order: 4;
+  font-family: "KakaoBig Regular", "Inter", "Noto Sans KR", sans-serif;
+  line-height: 1.5;
 }
 
 .swiper-count {
@@ -508,28 +864,24 @@ progress::-webkit-progress-value {
   height: 200px;
 } */
 
-.card-contents-info > strong {
+.card-info-strong {
+  font-family: "KakaoBig Bold";
+  font-size: 20px;
+  word-break: keep-all;
+  -webkit-font-smoothing: antialiased;
+  order: 2;
   padding-top: 3px;
-  color: rgb(32, 32, 32);
-  font-style: normal;
-  font-weight: 600;
 
   /* overflow: hidden; */
   text-overflow: ellipsis;
-  display: -webkit-box;
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
-  overflow-wrap: break-word;
-  word-break: keep-all;
-
-  letter-spacing: -0.1px;
-  line-height: 1.56;
 }
 
 .card-contents-info > span {
+  width: 390px;
   display: -webkit-box;
   margin: 11px 0px 0px;
-  width: 390px;
   /* height: 100%; */
   padding: 0px;
   overflow: hidden;
@@ -542,68 +894,164 @@ progress::-webkit-progress-value {
 }
 
 .progress-container {
-  order: 4;
   padding-top: 16px;
+  order: 4;
+}
+
+.progress-main-top-container {
+  padding-top: 12px;
+  margin-top: 0px;
 }
 
 .progress-bar {
+  width: 100%;
   height: 4px;
   display: flex;
-  border-radius: 999px;
   background-color: rgb(233, 233, 233);
-  width: 100%;
+  border-radius: 999px;
 }
 
 .current-progress-bar {
   height: 100%;
-  border-radius: inherit;
   background-color: rgb(255, 64, 80);
+  border-radius: inherit;
   /* width: 76%; */
 }
 
 .progress-info {
-  padding-top: 6px;
+  width: 100%;
   display: flex;
   justify-content: space-between;
   flex-direction: row;
+  padding-top: 6px;
+}
+
+.main-top-progress-info {
+  display: flex;
+  flex-direction: column;
   width: 100%;
 }
 
-.text-num-style {
-  font-size: 14px;
-  line-height: 1.57;
+.progress-info-box {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
 
+.main-top-progress-percent {
+  color: rgb(255, 64, 80);
+  font-size: 12px;
   font-style: normal;
+  font-family: "KakaoBig Regular", "Inter", "Noto Sans KR", sans-serif;
+  overflow-wrap: break-word;
+  line-height: 1.67;
   letter-spacing: -0.1px;
-  font-weight: 700;
+}
+
+.main-top-progress-dday {
+  color: rgb(68, 68, 68);
+  font-size: 12px;
+  font-style: normal;
+  font-family: "KakaoBig Regular", "Inter", "Noto Sans KR", sans-serif;
+  overflow-wrap: break-word;
+  line-height: 1.67;
+  letter-spacing: -0.1px;
 }
 
 .progress-info-money {
   color: rgb(32, 32, 32);
+  font-size: 14px;
+  font-style: normal;
+  font-family: "KakaoBig Bold", "Inter", "Noto Sans KR", sans-serif;
+  overflow-wrap: break-word;
+  line-height: 1.57;
+  letter-spacing: -0.1px;
 }
 
 .progress-info-percent {
   color: rgb(255, 64, 80);
+  font-size: 14px;
+  font-style: normal;
+  font-family: "KakaoBig Bold", "Inter", "Noto Sans KR", sans-serif;
+  overflow-wrap: break-word;
+  line-height: 1.57;
+  letter-spacing: -0.1px;
+}
+
+.card-progress-text-style {
+  font-size: 14px;
+  line-height: 1.57;
+}
+
+.progress-money-goal {
+  color: rgb(68, 68, 68);
+  font-size: 14px;
+  font-style: normal;
+  font-family: "KakaoBig Bold", "Inter", "Noto Sans KR", sans-serif;
+  overflow-wrap: break-word;
+  -webkit-font-smoothing: antialiased;
+  line-height: 1.57;
+  letter-spacing: -0.1px;
+}
+
+.em_end_box {
+  /* bottom: 0px; */
+  font-style: normal;
+  font-family: "KakaoBig Regular", "Inter", "Noto Sans KR", sans-serif;
+  overflow-wrap: break-word;
+  letter-spacing: -0.1px;
+  line-height: 1.5;
+  color: rgb(255, 255, 255);
+  border-radius: 4px;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  white-space: pre-line;
+  background-color: rgb(255, 64, 80);
+  box-sizing: border-box;
+  position: absolute;
+  z-index: 20;
+  /* height: 23px; */
+  /* padding: 0px 7px 2px; */
+  /* font-size: 11px; */
+  margin-right: 0px;
+
+  left: 10px;
+  bottom: 10px;
+  height: 27px;
+  padding: 4px 8px 5px;
+  font-size: 12px;
 }
 
 .card-tag {
-  order: 1;
-  padding: 10px 0px 0px;
-  background-color: transparent;
-  border: 0px;
   width: fit-content;
+  padding: 10px 0px 0px;
+  border: 0px;
+  background-color: transparent;
+  order: 1;
+  cursor: pointer;
 }
 
 .card-tag > span {
-  color: rgb(153, 153, 153);
+  font-family: "KakaoBig Bold";
   font-size: 13px;
-  font-weight: 900;
+  color: rgb(153, 153, 153);
   letter-spacing: -0.15px;
+  font-style: normal;
   overflow-wrap: break-word;
   line-height: 1.67;
-  opacity: 0.7;
 }
 
 .card-tag > span:first-child {
+  opacity: 0.7;
   padding-right: 2px;
+}
+
+.card-tag > span:last-child {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  padding: 0px;
+  margin: 0px;
 }
