docs : favicon 추카, 반응형 시작, 원사이트 화면 크기에 따라 깨짐 현상 해결

--- a/public/www/css/common.css
+++ b/public/www/css/common.css
@@ -41,6 +41,7 @@ body {
   overflow-wrap: break-word;
   background-color: rgb(247, 247, 247);
 }
+
 .wrap {
   padding-top: 70px;
   margin: 0 10px;
@@ -48,4 +49,13 @@ body {
 
 .br-12 {
   border-radius: 12px;
+}
+
+@media all and (max-width: 767px) and (min-width: 345px) {
+  /* body {
+    overflow-x: hidden;
+  } */
+  .wrap {
+    margin: 0 20px;
+  }
 }
