--- a/public/www/css/footer.css
+++ b/public/www/css/footer.css
@@ -7,7 +7,8 @@
 
 .footer-inner {
   width: 1120px;
-  /* max-width: 1120px; */
+  /* width: 100%; */
+  max-width: 1120px;
   /* height: 100%; */
   margin: 0px auto;
   display: flex;
