--- a/public/www/css/main.css
+++ b/public/www/css/main.css
@@ -12,3 +12,13 @@
 
   justify-content: space-between;
 }
+
+@media all and (max-width: 767px) and (min-width: 345px) {
+  .main-inner {
+    flex-direction: column;
+    width: 100%;
+    max-width: 767px;
+
+    margin: 20px auto 0px;
+  }
+}
